k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browser-games
  labels:
    app: browser-games
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: browser-games
